--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <title>The Dancing Goat Cafe</title>
   </head>
-  <body class="logoColor2">
-    <div class="container logoColor1">
-      <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #F8EDD1;">
-        <div class="collapse navbar-collapse logoColor1" id="navbarNav">
+  <body>
+    <div class="container outdoorColor">
+      <nav class="site-header sticky-top py-1">
+        <div class="collapse navbar-collapse outdoorColor" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
@@ -28,7 +28,7 @@
           </ul>
         </div>
       </nav>
-      <div class="row">
+      <div class="row sticky-top logoColor1">
         <div class="col-md-2" id="test">
           <img src="./images/logo2.jpg" class="img-fluid rounded float-right" alt="Responsive image">
         </div>
@@ -43,11 +43,11 @@
         </div>
       </div>
       <div class="row">
-        <div class="jumbotron col-md-6 logoColor1">
+        <div class="jumbotron col-md-6">
           <p class="lead">A family run business, serving coffee, cakes, breakfast and paninis. Open Tuesday to Sunday on Beverley Road.</p>
-          <a href="#" class="card-link">Opening times</a>
+          <a href="#" class="btn btn-outline-secondary">Opening times</a>
         </div>
-        <div class="jumbotron col-md-6 logoColor1" >
+        <div class="jumbotron col-md-6" >
           <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
