--- a/contactUs.html
+++ b/contactUs.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
 
     <script src="./js/map.js"></script>
@@ -13,8 +15,34 @@
     <title>The Dancing Goat Cafe</title>
   </head>
   <body class="logoColor2">
-    <div class="container logoColor1">
-      <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #F8EDD1;">
+      <header class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar outdoorColor">
+        <div class="container centerNav">
+        <div class="navbar-nav-scroll">
+          <ul class="navbar-nav bd-navbar-nav flex-row">
+            <li class="nav-item">
+              <a class="nav-link " href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Menu</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Events</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contactUs.html">Contact Us</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="fa fa-facebook"></a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="fa fa-instagram"></a>
+            </a>
+          </ul>
+        </div>
+      </div>
+</header>
+      <!--
+      <header class="navbar navbar-expand-lg navbar-light" style="background-color: #F8EDD1;">
         <div class="collapse navbar-collapse logoColor1" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
@@ -31,13 +59,14 @@
             </li>
           </ul>
         </div>
-      </nav>
+      -->
+
       <div class="row">
         <div class="col-md-2">
           <img src="./images/logo.jpg" class="img-fluid rounded float-right" alt="Responsive image">
         </div>
         <div class="col-md-10">
-          <h1 class="display-4">
+          <h1 class="display-3">
             THE DANCING GOAT
             <small class="text-muted">Coffee House</small>
             <p class="lead">
@@ -55,13 +84,7 @@
         <div class="jumbotron col-md-6 logoColor1">
           <div id="map"></div>
         </div>
-      </div>
     </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
 </html>
