--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <a class="nav-link" href="#">Events</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contactUs.html">Contact Us</a>
+              <a class="nav-link" href="contactUs">Contact Us</a>
             </li>
             <li class="nav-item">
               <a href="#" class="fa fa-facebook"></a>
@@ -36,31 +36,42 @@
         </div>
       </div>
     </header>
-    <div class="container">
-    <div class="row justify-content-around">
-      <div class="col-md-2 logoPad">
+    <div class="row noMargin">
+      <div class="col-2 logoPad">
           <img src="./images/logo.jpg" class="img-fluid rounded float-right" alt="Responsive image">
       </div>
-      <div class="col-md-10 inside c1 justify-content-around">
-        <h1 class="display-4 c2">
+      <div class="col inside c1 justify-content-around">
+        <h1 class="display-4 rText1">
           THE DANCING GOAT
           <small class="text-muted">Coffee House</small>
         </h1>
-        <p class="lead c2">
-          Hull Daily Mail Food & Drink Awards 2018 Tearoom/Coffee Shop of the Year
-        </p>
       </div>
     </div>
-  </div>
-    <div class="container outdoorColor justify-content-around">
+    <!--<div class="container outdoorColor justify-content-around">-->
       <div class="row">
-        <div class="jumbotron col-md-3">
-          <p class="lead">A family run business, serving coffee, cakes, breakfast and paninis. Open Tuesday to Sunday on Beverley Road.</p>
+        <div class="jumbotron col-md-12 d-flex justify-content-center">
+          <p class="lead rText2">
+            Hull Daily Mail Food & Drink Awards
+          </p>
+          <p class="lead text-muted rText2">
+            <br>2018 Tearoom/Coffee Shop of the Year
+          </p>
         </div>
-        <div class="jumbotron col-md-6">
-          <a href="#" class="btn btn-outline-secondary">Opening times</a>
+      </div>
+      <div class="row">
+        <div class="jumbotron col-md-12 d-flex justify-content-center">
+          <div class="row justify-content-around">
+            <div class="col-md-2">
+              <a href="contactUs" class="btn btn-outline-secondary">Menu</a>
+            </div>
+            <div class="col-md-2">
+              <a href="contactUs" class="btn btn-outline-secondary">Opening times</a>
+            </div>
+          </div>
         </div>
-        <div class="jumbotron col-md-6" >
+      </div>
+      <div class="row">
+        <div class="jumbotron col-md-12 d-flex justify-content-center" >
           <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -84,6 +95,6 @@
           </a>
         </div>
       </div>
-    </div>
+
   </body>
 </html>
