--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Doppio One' rel='stylesheet'>
     <link rel="stylesheet" type="text/css" href="./css/main.css">
+
     <script src="./js/bootstrap.min.js"></script>
     <title>The Dancing Goat Cafe</title>
   </head>
@@ -24,7 +26,7 @@
               <a class="nav-link" href="#">Events</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contactUs">Contact Us</a>
+              <a class="nav-link" href="./contactUs.html">Contact Us</a>
             </li>
             <li class="nav-item">
               <a href="#" class="fa fa-facebook"></a>
@@ -40,61 +42,82 @@
       <div class="col-2 logoPad">
           <img src="./images/logo.jpg" class="img-fluid rounded float-right" alt="Responsive image">
       </div>
-      <div class="col inside c1 justify-content-around">
-        <h1 class="display-4 rText1">
-          THE DANCING GOAT
-          <small class="text-muted">Coffee House</small>
-        </h1>
+      <div class="col inside">
+        <div class="row justify-content-center">
+          <div class="col-md-8">
+            <h1 class="display-4 rText1">
+              THE DANCING GOAT
+              <small class="text-muted">Coffee House</small>
+            </h1>
+          </div>
+        </div>
       </div>
     </div>
     <!--<div class="container outdoorColor justify-content-around">-->
-      <div class="row">
-        <div class="jumbotron col-md-12 d-flex justify-content-center">
-          <p class="lead rText2">
-            Hull Daily Mail Food & Drink Awards
-          </p>
-          <p class="lead text-muted rText2">
-            <br>2018 Tearoom/Coffee Shop of the Year
-          </p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="jumbotron col-md-12 d-flex justify-content-center">
-          <div class="row justify-content-around">
-            <div class="col-md-2">
-              <a href="contactUs" class="btn btn-outline-secondary">Menu</a>
-            </div>
-            <div class="col-md-2">
-              <a href="contactUs" class="btn btn-outline-secondary">Opening times</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="jumbotron col-md-12 d-flex justify-content-center" >
-          <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="d-block w-100" src="./images/outside.jpg" alt="First slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="./images/cake.jpg" alt="Second slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="./images/inside.jpg" alt="Second slide">
-              </div>
-            </div>
-          </div>
-          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
-      </div>
 
+    <div class="jumbotron jumbotron-fluid col-md-12 d-flex justify-content-center">
+      <div class="container">
+        <div class="row justify-content-around">
+          <div class="col-md-6">
+            <div class="row">
+              <div class="col-md-12">
+                <p>
+                  Here's a big block of text. We should probably think of something
+                  to say about the Buck clan and Donna's fantastic cakes so we can
+                  fill this first page a bit. Or maybe we can put some quotes
+                  from customers?
+                </p>
+              </div>
+            </div>
+            <div class="row justify-content-center">
+              <div class="col-md-4">
+                <a href="contactUs" class="btn btn-outline-secondary">Menu</a>
+              </div>
+              <div class="col-md-4">
+                <a href="contactUs" class="btn btn-outline-secondary">Opening times</a>
+              </div>
+            </div>
+            <div class="row top-buffer justify-content-center">
+              <div class="col-md-12">
+                <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img class="d-block w-100" src="./images/outside.jpg" alt="First slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="./images/cake.jpg" alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="./images/inside.jpg" alt="Second slide">
+                    </div>
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card" style="width: 18rem;">
+              <img class="card-img-top" src="./images/award.jpg">
+              <div class="card-body">
+                <h5 class="card-title">Hull Daily Mail Food & Drink Awards</h5>
+                <h6 class="card-subtitle mb-2 text-muted">2018 Tearoom/Coffee Shop of the Year</h6>
+                <p class="lead rText1">
+                </p>
+                <p class="lead text-muted rText2">
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
