--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
     <link href='https://fonts.googleapis.com/css?family=Doppio One' rel='stylesheet'>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="./css/main.css">
 
     <script src="./js/bootstrap.min.js"></script>
@@ -16,24 +18,24 @@
       <div class="container centerNav justify-content-around">
         <div class="navbar-nav-scroll justify-content-around">
           <ul class="navbar-nav bd-navbar-nav flex-row justify-content-around">
-            <li class="nav-item">
-              <a class="nav-link " href="/">Home</a>
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Menu</a>
+              <a class="nav-link" href="./menu.html">Menu</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Events</a>
+              <a class="nav-link" href="./event.html">Events</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./contactUs.html">Contact Us</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="fa fa-facebook"></a>
+              <a href="https://www.facebook.com/Dancinggoathull" class="fa fa-facebook"></a>
             </li>
             <li class="nav-item">
-              <a href="#" class="fa fa-instagram"></a>
-            </a>
+              <a href="https://www.instagram.com/dancinggoathull" class="fa fa-instagram"></a>
+            </li>
           </ul>
         </div>
       </div>
