--- a/contactUs.html
+++ b/contactUs.html
@@ -20,23 +20,23 @@
         <div class="navbar-nav-scroll">
           <ul class="navbar-nav bd-navbar-nav flex-row">
             <li class="nav-item">
-              <a class="nav-link " href="/">Home</a>
+              <a class="nav-link " href="./index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Menu</a>
+              <a class="nav-link" href="./menu.html">Menu</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Events</a>
+              <a class="nav-link" href="./events.html">Events</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contactUs.html">Contact Us</a>
+              <a class="nav-link" href="#">Contact Us</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="fa fa-facebook"></a>
+              <a href="https://www.facebook.com/Dancinggoathull" class="fa fa-facebook"></a>
             </li>
             <li class="nav-item">
-              <a href="#" class="fa fa-instagram"></a>
-            </a>
+              <a href="https://www.instagram.com/dancinggoathull" class="fa fa-instagram"></a>
+            </li>
           </ul>
         </div>
       </div>
